# sizheng_agents

./: ARCHITECTURE.md  requirements.txt
B-assistant-to-the-outline-of-modern-chinese-history-main/: README.md  app.py  generate_database.py  jindaishi_agent.py  jindaishi_kg_agent.py  jindaishi_qa_agent.py  requirements.txt
B-assistant-to-the-outline-of-modern-chinese-history-main/database_agent_jindaishi/: index.faiss  index.pkl
B-assistant-to-the-outline-of-modern-chinese-history-main/static/: script.js  style.css
B-assistant-to-the-outline-of-modern-chinese-history-main/templates/: home.html  index.html  role_chat.html
C-assistant-to-ideology-and-rule-of-law-main/: README.md  app.py  generate_database.py  sixiangdaodefazhi_agent.py  sixiangdaodefazhi_kg_agent.py  sixiangdaodefazhi_qa_agent.py
C-assistant-to-ideology-and-rule-of-law-main/static/: script.js  (+1 more)
D-assistant-to-the-introduction-of-mao-zedong-thought-main/: app.py  generate_database.py  maogai_agent.py  maogai_kg_agent.py  maogai_qa_agent.py  role_agent.py
E-assistant-to-the-introduction-of-xi-jinping-thought-main/: app.py  generate_database.py  role_agent.py  xigai_agent.py  xigai_kg_agent.py  xigai_qa_agent.py
shared_utils/: __init__.py  base_kg_agent.py  llm_wrapper.py
启真问智项目汇总/: README.md  pyproject.toml
启真问智项目汇总/portal/: app.py
启真问智项目汇总/portal/static/: style.css
启真问智项目汇总/portal/templates/: index.html
启真问智项目汇总/shared_utils/: __init__.py  base_agent.py  base_dialogue_agent.py  base_kg_agent.py  base_retrieval_agent.py  llm_wrapper.py  multimodal_agent.py  prompts.py  vector_utils.py
(+22 files in other folders)
