[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-utils-ideopol"
version = "0.1.0"
description = "Shared reusable utilities for ideological-political course assistants (LLM agents, prompts, vector utils)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Qizhen Team" }]
license = { text = "MIT" }
keywords = ["LLM", "LangChain", "LangGraph", "DashScope", "education", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["shared_utils"]


